refactor code with partial and add validation step on contact deletion

--- a/app/views/_partials/contact.hbs
+++ b/app/views/_partials/contact.hbs
@@ -90,10 +90,12 @@
 <script>
     var deleteButton = document.getElementById("delete-{{ contact.id }}");
     deleteButton.addEventListener('click', function(ev) {
-      deleteContact('{{ contact.id }}').then(function (response) {
-        location.assign(window.location.pathname);
-      })
-      .catch(console.log);
+      if (confirm('Es-tu sur de vouloir supprimer le contact ?')) {
+        deleteContact('{{ contact.id }}').then(function (response) {
+          location.assign(window.location.pathname);
+        })
+        .catch(console.log);
+      }
     });
 </script>
 {{/isPermitted}}
