remove p as child of a in contactDuplicates.hbs

--- a/app/views/contacts/contactDuplicates.hbs
+++ b/app/views/contacts/contactDuplicates.hbs
@@ -1,7 +1,7 @@
 <ul>
   {{#each contacts}}
     <li><a href="/contacts/duplicates/{{ this.ids }}">
-      <p> Il y a {{ this.count }} comptes avec pour nom :
+      Il y a {{ this.count }} comptes avec pour nom :
       {{#each this._id.name}}
         {{ this }}
       {{/each}}
