--- a/public/css/style.less
+++ b/public/css/style.less
@@ -120,3 +120,7 @@ header {
   // copied from pure-button-active
   box-shadow: 0 0 0 1px rgba(0,0,0,.15) inset,0 0 6px rgba(0,0,0,.2) inset;
 }
+
+fieldset{
+  border-style: none;
+}
