--- a/public/css/style.less
+++ b/public/css/style.less
@@ -6,8 +6,14 @@
 
 body {
   font-family: 'Roboto', sans-serif;
+  font-size: 1em;
 }
 
+main{
+  background-image: url(/images/testfond2.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 a {
   color: #00B7FF;
 }
@@ -126,5 +132,10 @@ fieldset{
 }
 
 .btn{
-  background-color: #42a5f5;
+  background-color: #00d2ff;
+}
+
+.btn:hover {
+    background-color: #00d2ff;
+    opacity: 0.75;
 }
