--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -139,3 +140,61 @@ fieldset{
     background-color: #00d2ff;
     opacity: 0.75;
 }
+
+#logo{
+  height: 7vh;
+  margin-top: 1vh;
+  margin-left: 1vh;
+}
+
+nav {
+  background-color: #00d2ff;
+}
+
+h4, h3, h2, h1{
+  color: #607d8b !important;
+}
+
+  /* label underline focus color */
+  .input-field input[type=text]:focus {
+    border-bottom: 1px solid #607d8b !important;
+    box-shadow: 0 1px 0 0 #000;
+    color: #607d8b !important;
+  }
+
+  /* valid color */
+  .input-field input[type=text].valid {
+    border-bottom: 1px solid #607d8b;
+    box-shadow: 0 1px 0 0 #000;
+  }
+
+  /* icon prefix focus color */
+  .input-field .prefix.active {
+    color: #607d8b;
+  }
+
+  /* label focus color */
+     .input-field input[type=text]:focus + label{
+       color: #607d8b;
+     }
+
+   /* invalid color */
+      .input-field input[type=text].invalid {
+      border-bottom: 1px solid #607d8b;
+      box-shadow: 0 1px 0 0 #000;
+    }
+
+    /* label focus color */
+ .input-field input:focus + label {
+   color: #607d8b !important;
+ }
+ /* label underline focus color */
+
+ input:focus {
+   border-bottom: 1px solid #607d8b !important;
+   box-shadow: 0 1px 0 0 #607d8b !important
+ }
+
+  //  label.active:active{
+  //    color: #607d8b !important,
+  //  }
