--- a/app/views/_partials/contactFilters.hbs
+++ b/app/views/_partials/contactFilters.hbs
@@ -10,7 +10,7 @@
       <label for="tags">Etiquettes</label>
       <select multiple name="tags" id="tags">
         {{#tags}}
-        <option value="{{ id }}" {{#inArray ../query.tags id}}selected{{/inArray}}>
+        <option value="{{ id }}" {{#if ../query.tags }}{{#inArray ../query.tags id}}selected{{/inArray}}{{/if}}>
           {{ name }}
         </option>
         {{/tags}}
