--- a/app/views/_layouts/main.hbs
+++ b/app/views/_layouts/main.hbs
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width">
   <title>{{ title }}</title>
 
-  <link rel="stylesheet" href="/lib/pure/pure-min.css">
-  <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pure/1.0.0/pure-min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 
