--- a/public/css/style.less
+++ b/public/css/style.less
@@ -48,9 +48,13 @@ a {
   padding : 5px;
   display : inline-block;
 
-  .tag-remove{
+  .tag-remove {
     padding-left : 5px;
   }
+}
+
+.material-icons {
+  vertical-align: bottom;
 }
 
 main {
