fixed background image

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -14,6 +14,7 @@ main{
   background-image: url(/images/testfond2.png);
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 a {
   color: #00B7FF;
